Added P, BR and A elements

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <section id="main-section">
+    <p>This is a p element <br>
+    with a line break.</p>
+    <a href="https://github.com/aaronhdcomps/Lecture01">Here is a link to my repo.</a>
+    </section>    
 </body>
 </html>
