Added style rules

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>This is a p element <br>
     with a line break.</p>
     <a href="https://github.com/aaronhdcomps/Lecture01">Here is a link to my repo.</a>
-    </section>    
+    </section>
+    <footer class="foot">&copy; Aaron Abramson 2022</footer>    
 </body>
 </html>
